<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2013 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_location">Location</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_new">New Job</string>
    <string name="title_activity_jobs">Jobs</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_job_detail">Job Detail</string>
    <string name="title_activity_job_services">Job Services</string>
    <string name="where">Where</string>
    <string name="when">When</string>
    <string name="who">Who</string>
    <string name="notes">Notes</string>
    <string name="jservices">Service Total</string>
    <string name="menu_editview">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="after">AFTER</string>
    <string name="before">BEFORE</string>
</resources>