<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.android.actionbarcompat.basic.JobDetail">

    <EditText
        android:id="@+id/where_text"
        android:text="@string/where"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        style="@style/Base.TextAppearance.AppCompat.Large" />
    <ImageButton
        android:id="@+id/btn_map"
        android:layout_alignRight="@id/where_text"
        android:layout_alignBottom="@id/where_text"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:src="@drawable/ic_action_location"
        />
    <EditText
        android:id="@+id/when_text"
        android:text="@string/when"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/where_text"
        android:layout_marginBottom="30dp"
        style="@style/Base.TextAppearance.AppCompat.Large"/>
    <Button
        android:id="@+id/btn_when"
        android:layout_alignRight="@id/when_text"
        android:layout_alignBottom="@id/when_text"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="DATE"
        />
    <EditText
        android:id="@+id/who_text"
        android:text="@string/who"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/when_text"
        android:layout_marginBottom="30dp"
        style="@style/Base.TextAppearance.AppCompat.Large"/>
    <ImageButton
        android:id="@+id/btn_contact"
        android:layout_alignRight="@id/who_text"
        android:layout_alignBottom="@id/who_text"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:src="@drawable/ic_action_person"
        />
    <EditText
        android:id="@+id/notes_text"
        android:text="@string/notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/who_text"
        android:layout_marginBottom="50dp"
        style="@style/Base.TextAppearance.AppCompat.Large"/>

    <ImageView
        android:id="@+id/img_before"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:src="@drawable/ic_action_camera"
        android:layout_below="@+id/notes_text"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        />
    <Button
        android:id="@+id/btn_before"
        android:text="@string/before"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_before"
        android:layout_alignLeft="@+id/img_before"
     />
    <ImageView
        android:id="@+id/img_after"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:src="@drawable/ic_action_camera"
        android:layout_below="@+id/notes_text"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        />
    <Button
        android:id="@+id/btn_after"
        android:text="@string/after"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_after"
        android:layout_alignBottom="@+id/btn_before"
        android:layout_toRightOf="@+id/btn_before"
        android:layout_alignRight="@+id/img_after"
        />
    <ImageButton
        android:id="@+id/btn_next"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:src="@drawable/ic_action_forward"
        />

</RelativeLayout>
